--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -6,12 +6,15 @@
   <div class="row">
     <div class="col-12 h3"><%= page_title %>(Пользователь - <%= @payment.user.subdomain %>, счет номер - <%= @payment.invoice_id %>)</div>
     <%# f.association :user, input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'} if current_admin %>
-    <%# f.input :invoice_id , wrapper_html: { class: 'col-3'} %>
-    <%= f.input :payplan_od, label: 'Тариф', input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'} do %>
+    <%# f.association :invoice_id , wrapper_html: { class: 'col-3'} %>
+    <%= f.input :payplan_id, label: 'Тариф', input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'} do %>
+      <%= f.select :payplan_id, Payplan.all.map { |r| [ r.title, r.id ] }, {include_blank: false}, { class: "form-select optional" }%>
+    <% end %>
+    <%= f.input :payplan_id, label: 'Период', input_html: { class: "form-select" }, wrapper_html: { class: 'col-1'} do %>
       <%= f.select :payplan_id, Payplan.all.map { |r| [ r.period, r.id ] }, {include_blank: false}, { class: "form-select optional" }%>
     <% end %>
-    <%= f.input :status, collection: ['Не оплачен', 'Оплачен'], input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'}  %>
-    <%= f.input :paymenttype, collection: [['Счёт для юр лиц', 'invoice'],['Кредитные карты', 'creditcard'], ['Paypal', 'paypal']], label: 'Способ оплаты', input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'}  %>
+    <%= f.input :status, collection: Payment::Status,include_blank: false, input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'}  %>
+    <%= f.input :paymenttype, collection: Payment::Paymenttype, include_blank: false, label: 'Способ оплаты', input_html: { class: "form-select" }, wrapper_html: { class: 'col-3'}  %>
     <%# f.input :paymentdate, as: :string, wrapper_html: { class: 'col-3'} %>
     <%= f.input :paymentdate, as: :date, html5: true, wrapper_html: { class: 'col-3'} %>
     <%# f.input :paymentid, wrapper_html: { class: 'col-3'}  %>
