--- a/app/views/useraccounts/index.html.erb
+++ b/app/views/useraccounts/index.html.erb
@@ -1,114 +1,1 @@
-<div class="row">
-  <div class="col"><h1>Общая информация</h1></div>
-</div>
-<div class="row mt-3">
-  <div class="col">
-    <h3>Регистрация <small><%= current_user.name%> (<%= current_user.subdomain%>)</small></h3>
-    <p>Оплачен до  <% if !@pay_period.nil?%><%= @pay_period %><%else%>Бесплатно<%end%></p>
-    <p>Работает до  <%= current_user.valid_until.strftime("%d-%m-%Y" )  %></p>
-    <p><b>Название магазина: </b><%= @ins_title %></p>
-    <p><b>Телефон:</b> <%= @ins_phone %></p>
-    <p><b>Email:</b> <%= current_user.email %></p>
-  </div>
-  <div class="col">
-    <h3>Интеграция insales</h3>
-      <% integracia = current_user.insints.first if current_user.insints.first.present? %>
-      <p>Состояние:
-        <% if integracia %>настроена<% else %>не настроена<% end %>
-        <% if integracia && integracia.status %>и файлы добавлены в магазин<%else%>и файлы не добавлены в магазин<%end%>
-      </p>
-      <% if current_user.insints.first.present? %>
-        <% if current_user.insints.first.inskey.present?%>
-          <%= link_to 'Редактировать интеграцию', edit_insint_path(current_user.insints.first.id), class: 'btn btn-outline-primary mb-3' %>
-          <% if current_user.insints.first.status == false ||  current_user.insints.first.status.nil? %>
-            <%= link_to 'Добавить файлы', setup_script_insints_path(:insint_id => current_user.insints.first.id), class: 'btn btn-outline-primary mb-3' %>
-          <% else %>
-            <%= link_to 'Удалить файлы', delete_script_insints_path(:insint_id => current_user.insints.first.id), class: 'btn btn-outline-danger mb-3' %>
-          <% end %>
-        <% else %>
-          <% if current_user.insints.first.subdomen.present?%>
-            <p>Регистрация настроена автоматически</p>
-          <% else %>
-            <%= link_to 'Добавить интеграцию', new_insint_path, class: 'btn btn-outline-primary mb-3' %>
-          <% end %>
-        <% end %>
-      <% else %>
-        <%= link_to 'Добавить интеграцию', new_insint_path, class: 'btn btn-outline-primary mb-3' %>
-      <% end %>
-      <h3>Юр лица</h3>
-      <table class="table">
-        <thead class="thead-light">
-          <tr>
-            <th>Название</th>
-            <th>ИНН</th>
-            <th colspan="2"></th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% Company.all.each do |company| %>
-            <tr>
-              <td><%= company.title %></td>
-              <td><%= company.inn %></td>
-              <td><%= link_to '<i class="fa fa-pencil" aria-hidden="true"></i>'.html_safe, edit_company_path(company) %></td>
-              <td><%= link_to '<i class="fa fa-trash" aria-hidden="true"></i>'.html_safe, company, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= link_to 'Добавить компанию', new_company_path, class: 'btn btn-outline-primary mb-3' %>
-      <h3>Пользователи</h3>
-      <table class="table">
-        <thead class="thead-light">
-          <tr>
-            <th>Имя</th>
-            <th>Email</th>
-            <th>Магазин</th>
-            <th>id в магазине</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% @useraccounts.each do |useraccount| %>
-            <tr>
-              <td><%= useraccount.name %></td>
-              <td><%= useraccount.email %></td>
-              <td><%= useraccount.shop %></td>
-              <td><%= useraccount.insuserid %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-
-    </div>
-  </div>
-  <div class="row mt-2">
-    <div class="col-6">
-      <h3>Последние счета</h3>
-      <table class="table">
-        <thead class="thead-light">
-          <tr>
-            <th>Номер счета</th>
-            <th>Период продления</th>
-            <th>Сумма</th>
-            <th>Статус</th>
-            <th>Оплачен</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <% Invoice.all.order(:id).limit(5).each do |invoice| %>
-            <tr>
-              <td><%= link_to invoice.id , invoice %></td>
-              <td><%= invoice.payplan.period if invoice.payplan != nil%></td>
-              <td><%= invoice.sum %></td>
-              <td><%= invoice.status %></td>
-              <td><%= invoice.payments.present? ? invoice.payments[0].paymentdate : '' %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= link_to 'Новый счет', new_invoice_path, class: 'btn btn-outline-primary mt-2' %>
-    </div>
-    <div class="col"></div>
-  </div>
+<%= render "dashboard/user"%>
