--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -23,7 +23,8 @@
       <th>ФИО</th>
       <th>Email</th>
       <th>Phone</th>
-      <th>Товары в избранном</th>
+      <th>Избранное</th>
+      <th>Restock</th>
       <th colspan="1"></th>
     </tr>
   </thead>
@@ -37,6 +38,7 @@
         <td><%= client.email %></td>
         <td><%= client.phone %></td>
         <td><%= client.izb_productid.split(',').size %> шт.</td>
+        <td></td>
         <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, client, method: :delete, data: { confirm: 'Вы уверенны?' } %></td>
       </tr>
     <% end %>
