--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -10,10 +10,13 @@
 <table class="table">
   <thead class="thead-light">
     <tr>
-      <th>Номер счета</th>
-      <th>Период продления</th>
+      <th>Номер</th>
+      <th>Дата</th>
+      <th>Сервис</th>
+      <th>Период</th>
       <th>Сумма</th>
       <th>Статус</th>
+      <th>Способ</th>
       <th colspan="2"></th>
     </tr>
   </thead>
@@ -21,17 +24,15 @@
   <tbody>
     <% @invoices.each do |invoice| %>
       <tr>
-        <td><%= link_to invoice.id , invoice %></td>
-        <td><%= invoice.payplan.period if invoice.payplan != nil%></td>
+        <td><%= invoice.id %></td>
+        <td><%= invoice.created_at.in_time_zone.strftime("%d/%m/%Y %H:%M" ) %></td>
+        <td><%= invoice.payplan.title if invoice.payplan %></td>
+        <td><%= invoice.payplan.period if invoice.payplan %></td>
         <td><%= invoice.sum %></td>
-        <td><%= invoice.status %></td>
-        <% if invoice.status != 'Оплачен' %>
-          <td><%= link_to '<span class="oi oi-pencil"></span>'.html_safe, edit_invoice_path(invoice) %></td>
-          <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, invoice, method: :delete, data: { confirm: 'Вы уверенны?' } %></td>
-          <% else %>
-          <td></td>
-          <td></td>
-        <% end %>
+        <td><%= render 'invoice_status', f: invoice%></td>
+        <td><%= invoice.paymenttype %></td>
+        <td><%= link_to "Оплатить", edit_invoice_path(invoice) if invoice.status != 'Оплачен' && invoice.status != 'Отменён' %></td>
+        <td><%= link_to '<span class="oi oi-trash"></span>'.html_safe, invoice, method: :delete, data: { confirm: 'Вы уверенны?' } if invoice.status != 'Оплачен' %></td>
       </tr>
     <% end %>
   </tbody>
