--- a/app/views/payplans/_form.html.erb
+++ b/app/views/payplans/_form.html.erb
@@ -3,9 +3,13 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-    <div class="mt-5 row">
-    <%= f.input :period , wrapper_html: { class: 'col-4'}%>
-    <%= f.input :price, wrapper_html: { class: 'col-4'} %>
+  <div class="mt-5 row">
+    <%= f.input :handle , wrapper_html: { class: 'col-2'}%>
+    <%= f.input :title , wrapper_html: { class: 'col-3'}%>
+    <%= f.input :description , wrapper_html: { class: 'col-4'}%>
+    <%= f.input :service_handle, collection: Payplan::Services , wrapper_html: { class: 'col-2'}%>
+    <%= f.input :period, collection: Payplan::Period , wrapper_html: { class: 'col-1'}%>
+    <%= f.input :price, wrapper_html: { class: 'col-2'} %>
   </div>
 
   <div class="btn-group mt-5">
