--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -35,7 +35,7 @@
   <table class="table table-hover table-condensed">
   <thead>
     <tr class="bg-success">
-      <th><%%= check_box_tag 'selectAll', value: 'selectAll'%></th>
+      <th><%%= check_box_tag 'selectAll', 'selectAll'%></th>
 <% attributes.reject(&:password_digest?).each do |attribute| -%>
       <th><%= attribute.human_name %></th>
 <% end -%>
