--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -52,7 +52,7 @@
               <a class="text-muted" href="/#o-nas">О нас</a>
             </li>
             <li>
-              <a class="text-muted" href="/">Оферта</a>
+              <a class="text-muted" href="/oferta">Оферта</a>
             </li>
           </ul>
         </div>
