--- a/app/views/restock_setups/edit.html.erb
+++ b/app/views/restock_setups/edit.html.erb
@@ -1,6 +1,4 @@
-<h2>Editing Restock Setup</h2>
-
-<%= render 'form', restock_setup: @restock_setup %>
+<%= render 'form', favorite_setup: @restock_setup, page_title: "Редактирование" %>
 
 <%# link_to 'Show', @client %>
 <%# link_to 'Back', clients_path %>
