--- a/app/views/restock_setups/new.html.erb
+++ b/app/views/restock_setups/new.html.erb
@@ -1,5 +1,3 @@
-<h2>New Restock Setup</h2>
-
-<%= render 'form', restock_setup: @restock_setup %>
+<%= render 'form', favorite_setup: @restock_setup, page_title: "Настройки"  %>
 
 <%# link_to 'Back', clients_path %>
