--- a/app/views/client_mailer/emailizb.txt.erb
+++ b/app/views/client_mailer/emailizb.txt.erb
@@ -2,7 +2,7 @@
 Ваши товары из раздела избранное представлены ниже:
 Id товара,Название,Цена
 <% @products.each do |pr| %>
-<%=pr.split(',')[0]%>,<%= pr.split(',')[1]} %><%=pr.split(',')[4]%>
+<%= pr.insid %>,<%= pr.title %> - <%= pr.price %>
 <% end %>
 ___
 <%= @shoptitle %>
