--- a/app/views/client_mailer/emailizb_old.html.erb
+++ b/app/views/client_mailer/emailizb_old.html.erb
@@ -17,9 +17,9 @@
     <tbody>
       <% @products.each do |pr| %>
         <tr>
-          <td><%= link_to "#{pr.title}", @shopurl+"/product_by_id/"+pr.insid.to_s, target: "_blank" %></td>
-          <td></td>
-          <td><%=pr.price %></td>
+          <td><%= link_to "#{pr.split(',')[1]}", @shopurl+"/product/"+pr.split(',')[2], target: "_blank" %></td>
+          <td><img src="<%=pr.split(',')[3]%>" alt="<%=pr.split(',')[1]%>"></td>
+          <td><%=pr.split(',')[4]%></td>
         </tr>
       <% end %>
         </tbody>
@@ -28,6 +28,6 @@
     <p><%= @shoptitle %></p>
     <p>Спасибо что Вы с нами, хорошего дня!</p>
     <p></p>
-    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "K-comment - помощник нашего магазина"</a></p>
+    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Сервис "K-comment - Избранные товары"</a></p>
   </body>
 </html>
