--- a/app/views/payplans/_form.html.erb
+++ b/app/views/payplans/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :handle , wrapper_html: { class: 'col-2'}%>
     <%= f.input :title , wrapper_html: { class: 'col-3'}%>
     <%= f.input :description , wrapper_html: { class: 'col-4'}%>
-    <%= f.input :service_handle, collection: Payplan::Services , wrapper_html: { class: 'col-2'}%>
+    <%= f.input :service_handle, collection: Payplan::Services , input_html: { class: "form-select" } , wrapper_html: { class: 'col-2'}%>
     <%= f.input :period, collection: Payplan::Period , wrapper_html: { class: 'col-1'}%>
     <%= f.input :price, wrapper_html: { class: 'col-2'} %>
   </div>
