--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,25 +1,40 @@
 
 <div class="row">
-<div class="col-6">
-  <strong>Insid:</strong>
-  <%= @product.insid %>
+<div class="col-12 mb-3">
+  (<%= @product.insid %>) <%= @product.title %> - <%= @product.price %>
 </div>
 
 <div class="col-6">
-  <strong>Title:</strong>
-  <%= @product.title %>
-</div>
+  <div class="table-responsive">
+    <table class="table table-hover table-condensed">
+    <thead>
+      <tr class="bg-success">
+        <th>Insid</th>
+        <th>Sku</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+    </thead>
 
-<div class="col-6">
-  <strong>Price:</strong>
-  <%= @product.price %>
+    <tbody id="items_table">
+      <% @product.variants.each do |variant| %>
+      <tr>
+          <td><%= link_to "#{variant.insid }", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+variant.product.insid.to_s+"?variant_id="+variant.insid.to_s, target: "_blank" %></td>
+          <td><%= variant.sku %></td>
+          <td><%= variant.quantity %></td>
+          <td><%= variant.price %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  </div>
 </div>
 
 </div>
 
 <div class="row">
 <div class="col-3 btn-group mt-5">
-<%= link_to 'Edit', edit_product_path(@product) , class: 'btn btn-success' %> |
+<%# link_to 'Edit', edit_product_path(@product) , class: 'btn btn-success' %>
 <%= link_to 'Back', products_path, class: 'btn btn-outline-primary' %>
 </div>
 </div>
