--- a/app/views/restock_setups/_form.html.erb
+++ b/app/views/restock_setups/_form.html.erb
@@ -1,19 +1,37 @@
-
 <%= simple_form_for(@restock_setup) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="row">
+    <div class="col-12 h4"><%= page_title %></div>
+    <div class="col-12 h6">Cервис: <%= RestockSetup::TITLE %></div>
+    <div class="col-12 h6">Описание: <%= RestockSetup::DESCRIPTION %></div>
+    <div class="col-12 h4 mt-2 mb-2">Статус</div>
     <div class="col-6">
-    <%= f.input :title %>
-    <%= f.input :handle %>
-    <%= f.input :description %>
-    <%= f.input :status %>
+    <% if current_user.insints.present? && current_user.insints.first.status == true %>
+      <%= f.input :status, label: "Вкл/Выкл" %>
+      <%= f.input :title, as: :hidden, input_html: { value: FavoriteSetup::TITLE } %>
+      <%= f.input :handle, as: :hidden, input_html: { value: FavoriteSetup::HANDLE }  %>
+      <%= f.input :description, as: :hidden, input_html: { value: FavoriteSetup::DESCRIPTION }  %>
+    <% else %>
+    Внимание!!! Интеграция не настроена. Настройте <%= link_to "интеграцию", useraccounts_path %>
+  <% end %>
+  </div>
 </div>
+<div class="row mt-1">
+  <div class="col-12 h4 mt-2 mb-2">Тарифы</div>
+    <div class="col-12 row">
+      <% disabled = @restock_setup.payplan && @restock_setup.payplan.handle.include?("free") ? false : Payplan.restock_free_id %>
+      <% checked = @restock_setup.payplan ? @restock_setup.payplan.id : Payplan.restock_free_id %>
+
+      <%= f.association :payplan, label: false, collection: Payplan.where(service_handle: "restock").order(:id), as: :radio_buttons,
+                              label_method: lambda { |plan| "#{plan.title} Период продления #{plan.period} месяц. Стоимость -  #{plan.price} руб".html_safe },
+                              value_method: :id, disabled: disabled, checked: checked %>
+  </div>
 </div>
   <div class="row">
   <div class="col-3 btn-group mt-5">
-    <%= f.button :submit, class: 'btn btn-success' %>
+    <%= f.button :submit, "Сохранить", class: 'btn btn-success' %>
     <%= link_to 'Назад', :back, class: 'btn btn-outline-primary' %>
   </div>
   </div>
