change text main page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <!-- About Section Content -->
     <div class="row">
       <div class="col-lg-4 ml-auto">
-        <p class="lead">"K-comment - избранные товары" это приложение для CMS InSales. Оно позволяет сделать в магазине раздел с избранными товарами для Ваших зарегистрированных клиентов.</p>
+        <p class="lead">"K-comment" это дополнительные сервисы для CMS InSales. Они позволяют расширить стандартный функционал магазина. Например сервис "Избранные товары" - делает в магазине раздел с избранными товарами для Ваших зарегистрированных клиентов.</p>
       </div>
       <div class="col-lg-4 mr-auto">
         <p class="lead">Это позволит Вашим клиентам получить более качественные сервис от Вашего магазина.</p>
