--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,7 +13,7 @@
           <li class="list-group-item border-0 bg-transparent">
             <a class="text-muted" href="mailto:k-comment.ru">info@k-comment.ru</a>
           </li>
-          <li class="list-group-item text-muted border-0 bg-transparent">K-comment<small> сервис избранных товаров &copy; 2019-<%= Time.now.strftime("%Y" )%></small></li>
+          <li class="list-group-item text-muted border-0 bg-transparent">K-comment<small> &copy; 2019-<%= Time.now.strftime("%Y" )%></small></li>
         </ul>
         </div>
         </div>
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-12 col-sm-3 text-center text-md-start">
           <h5>K-comment</h5>
-          <h6>сервис избранных товаров</h6>
+          <h6>автоматизация CMS InSales</h6>
           <ul class="list-unstyled text-small">
             <li>
               <a class="text-muted" href="+74997042035">84997052117</a>
