--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2">
   <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" href="http://k-comment.ru">
-    <%= image_tag "logo_color.png", data: {src: "logo_color.png", title: 'K-comment избранные товары'}, class: 'w-100 pe-5' %>
+    <%= image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'w-100 pe-5' %>
   </a>
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
     <li>
