--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="<%= root_path %>">
-    <%= image_tag "logo_white.png", data: {src: "logo_white.png", title: 'K-comment избранные товары'}, class: 'logo logo_white' %>
+    <%# image_tag "logo_white.png", data: {src: "logo_white.png", title: 'K-comment избранные товары'}, class: 'logo logo_white' %>
+    <%= image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'logo logo_white' %>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
