--- a/app/views/client_mailer/emailizb.html.erb
+++ b/app/views/client_mailer/emailizb.html.erb
@@ -10,16 +10,14 @@
       <thead>
       <tr>
         <th>Название товара</th>
-        <th>Изображение</th>
         <th>Цена</th>
       </tr>
     </thead>
     <tbody>
-      <% @products.each do |pr| %>
+      <% @product_data.each do |pr| %>
         <tr>
-          <td><%= link_to "#{pr.title}", @shopurl+"/product_by_id/"+pr.insid.to_s, target: "_blank" %></td>
-          <td></td>
-          <td><%=pr.price %></td>
+          <td><%= link_to "#{pr[:title]}", @shopurl+"/product_by_id/"+pr[:insid].to_s, target: "_blank" %></td>
+          <td><%=pr[:price] %></td>
         </tr>
       <% end %>
         </tbody>
@@ -28,6 +26,6 @@
     <p><%= @shoptitle %></p>
     <p>Спасибо что Вы с нами, хорошего дня!</p>
     <p></p>
-    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "K-comment - помощник нашего магазина"</a></p>
+    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "K-comment"</a></p>
   </body>
 </html>
