--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -19,6 +19,7 @@
   <thead class="thead-light">
     <tr>
       <th>ID</th>
+      <th>Создан</th>
       <th>ID INS</th>
       <th>ФИО</th>
       <th>Email</th>
@@ -33,6 +34,7 @@
     <% @clients.each do |client| %>
       <tr>
         <td><%= link_to client.id, client_path(client) %></td>
+        <td><%= client.created_at.in_time_zone.strftime("%d/%m/%Y")%></td>
         <td><%= client.clientid%></td>
         <td><%= client.name %><%= client.surname%></td>
         <td><%= client.email %></td>
