--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,12 +1,12 @@
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-2">
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
   <a class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none" href="http://k-comment.ru">
     <%= image_tag "new_logo_k_comment.png", data: {src: "new_logo_k_comment.png", title: 'K-comment'}, class: 'w-100 pe-5' %>
   </a>
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li>
-      <a class="p-2 text-dark" href="/#service">О сервисе</a>
+    <li class="p-2 nav-item">
+      <a class="nav-link text-dark" href="/#about-app">О приложении</a>
     </li>
-    <li>
+    <%# <li>
       <a class="p-2 text-dark" href="/#price">Цена</a>
     </li>
     <li>
@@ -15,8 +15,17 @@
     <li>
       <a class="p-2 text-dark" href="/#o-nas">О нас</a>
     </li>
-    <li>
-      <a class="p-2 text-dark" href="/index-setup">Помощь</a>
+    <li> %>
+    <li class="p-2 nav-item dropdown">
+    <a class="nav-link text-dark dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Сервисы</a>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="/favorite">Избранные товары</a></li>
+      <li><a class="dropdown-item" href="/restock">Собщить о поступлении</a></li>
+      <li><a class="dropdown-item" href="/message">Сообщения</a></li>
+    </ul>
+  </li>
+    <li class="p-2 nav-item">
+      <a class="nav-link text-dark" href="/documents">Помощь</a>
     </li>
   </ul>
   <div class="col-md-3 text-end">
