--- a/app/views/insints/adminindex.html.erb
+++ b/app/views/insints/adminindex.html.erb
@@ -28,7 +28,7 @@
   <tbody>
     <% @insints.each do |insint| %>
       <tr>
-        <td><%= insint.insalesid %></td>
+        <td><%= insint.insales_account_id %></td>
         <td><%= insint.user.name %></td>
         <td><%= insint.subdomen %></td>
         <td><%= insint.inskey %></td>
