--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -40,17 +40,26 @@
           <h5>Меню</h5>
           <ul class="list-unstyled text-small">
             <li>
-              <a class="text-muted" href="/#service">О сервисе</a>
+              <a class="text-muted" href="/#about-app">О приложении</a>
             </li>
             <li>
-              <a class="text-muted" href="/index-setup">Настройка</a>
+              <a class="text-muted" href="/favorite">Избранные товары</a>
             </li>
             <li>
+              <a class="text-muted" href="/restock">Собщить о поступлении</a>
+            </li>
+            <li>
+              <a class="text-muted" href="/message">Сообщения</a>
+            </li>
+            <li>
+              <a class="text-muted" href="/documents">Настройка</a>
+            </li>
+            <%# <li>
               <a class="text-muted" href="/#price">Стоимость</a>
             </li>
             <li>
               <a class="text-muted" href="/#o-nas">О нас</a>
-            </li>
+            </li> %>
             <li>
               <a class="text-muted" href="/oferta">Оферта</a>
             </li>
