--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -6,8 +6,8 @@
     <p><b>Имя:</b> <%= link_to current_user.name, edit_user_path( current_user )%><small> (subdomain - <%= current_user.subdomain%>)</small></p>
     <p><b>Оплачен до:</b>  <% if !@pay_period.nil?%><%= @pay_period %><%else%>Бесплатно<%end%></p>
     <p><b>Работает до:</b>  <%= current_user.valid_until.strftime("%d-%m-%Y" )  %></p>
-    <p><b>Название магазина: </b><%= @ins_account.title %></p>
-    <p><b>Телефон:</b> <%= @ins_account.phone %></p>
+    <p><b>Название магазина: </b><%= @ins_account.title if @ins_account %></p>
+    <p><b>Телефон:</b> <%= @ins_account.phone if @ins_account%></p>
     <p><b>Email:</b> <%= current_user.email %></p>
   </div>
   <div class="col">
