--- a/app/views/home/documents.html.erb
+++ b/app/views/home/documents.html.erb
@@ -1,14 +1,12 @@
 <div class="container">
 <%= render partial: "/home/header"%>
 </div>
-<section class="page-section mb-0" id="setup">
+<section class="page-section mb-0">
   <div class="container">
 
-    <!-- About Section Heading -->
     <h1 class="display-4 text-center text-uppercase pb-4">Настройка</h1>
 
-    <div class="container">
-      <h1 class="h2 text-center">Установке и настройка</h1>
+      <div class="h2 text-center">Установке и настройка</div>
       <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Установка из магазина приложений InSales</a>
@@ -383,8 +381,6 @@ data-izb-delete="{{ product.id }}" class="izb-icon deleteizb js-izb-delete fa-he
             </ol>
           </div>
         </div>
-
-      </div>
 
     </div>
 </section>
